Remove JOGL dependencies and make OpenGL support abstract. Comment out / delete code that causes problems with AWT headless. Change versioning scheme. Update gitignore.